[Refactor] 상품 리스트 : 모든 필터링, 정렬 페이징 한 컨트롤러로 통합, 서비스 메서드 분리